--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"short_name":"Canteens",
 	"start_url":"index.html",
 	"display":"standalone",
-	"background_color":"#5900b3",
+	"background_color":"#000000",
 	"theme_color":"black",
 	"scope": ".",
 	"description":"Canteen Menus",
