--- a/manifest.json
+++ b/manifest.json
@@ -11,17 +11,16 @@
 		{
 			"src": "./static/menu.png",
 			"type": "image/png",
-			"sizes": "192x192",
 			"purpose": "any"
 		},
 		{
 			"src": "./static/menu.png",
 			"type": "image/png",
-			"sizes": "512x512",
+			"sizes": "192x192",
 			"purpose": "any"
 		},
 		{
-			"src": "./static/menu.png",
+			"src": "./static/menu_144.png",
 			"type": "image/png",
 			"sizes": "144x144",
 			"purpose": "maskable"
